# goit-pythonweb-hw-10

./: .gitignore  Dockerfile  docker-compose.yml  example.env  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 72605d6788b7_initial_migration.py  cb30d1194f6d_fix_filed_in_table_user.py  cf0e0edc664a_added_user_and_refreshtoken.py
src/conf/: config.py  constants.py
src/controlllers/: base_conroller.py  contacts_controllers.py  refresh_token_controller.py  user_conrollers.py
src/core/: depend_service.py  email_token.py
src/database/: db.py
src/models/: models_contacts.py
src/routers/: auth_routes.py  contacts_routes.py  user_routes.py
src/schemas/: contact_schemas.py  email_schema.py  token_schemas.py  user_schemas.py
src/services/: auth_service.py  contacts_services.py  service_email.py  upload_file_service.py  user_service.py
src/services/templates/: verify_email.html
